--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
   </head>
   <body>
 
-    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="mobileLogo" href="#" data-toggle="collapse" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle logo">
+        <img src="client_res/img/nav/mobileLogo.png" width="90" />
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-around" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">Features</a>
+          <a class="navbar-brand" href="#"><img src="client_res/img/nav/navLogo.png" width="50" /></a>
+          <a class="nav-item nav-link" href="#">Pricing</a>
+          <a class="nav-item nav-link disabled" href="#">Disabled</a>
+        </div>
+      </div>
+    </nav> <!-- navigation bar -->
 
   </body>
   <script src="ext_res/jquery/jquery-3.2.1.js" type="text/javascript"></script> <!-- jQuery -->
