header and footer
responsive header and footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <header class="nav-header">
+    <header class="site-header">
 
       <nav class="navbar">
         <a class="mobile-logo" href="index.html">
@@ -37,14 +37,14 @@
           <a class="login-btn" href="">Login</a>
         </div>
         <div class="social-container">
-          <a href=""><img src="client_res/img/icon/search.png" alt=""></a>
-          <a href=""><img src="client_res/img/icon/social/instagram.png" alt=""></a>
-          <a href=""><img src="client_res/img/icon/social/pinterest.png" alt=""></a>
-          <a href=""><img src="client_res/img/icon/social/instagram.png" alt=""></a>
-          <a href=""><img src="client_res/img/icon/social/facebook.png" alt=""></a>
-          <a href=""><img src="client_res/img/icon/social/youtube.png" alt=""></a>
+          <input class="search-box" type="text"><img class="search-icon" src="client_res/img/icon/search.png" alt="">
+          <a class="social-link" href=""><img class="social-icon" src="client_res/img/icon/social/instagram.png" alt=""></a>
+          <a class="social-link" href=""><img class="social-icon" src="client_res/img/icon/social/pinterest.png" alt=""></a>
+          <a class="social-link" href=""><img class="social-icon" src="client_res/img/icon/social/instagram.png" alt=""></a>
+          <a class="social-link" href=""><img class="social-icon" src="client_res/img/icon/social/facebook.png" alt=""></a>
+          <a class="social-link" href=""><img class="social-icon" src="client_res/img/icon/social/youtube.png" alt=""></a>
         </div>
-      </div>
+      </div> <!-- secondary navigation for login button and social link -->
 
       <div class="slider">
         <div class="love">
@@ -55,16 +55,111 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.
           </div>
         </div>
-      </div>
+        <div class="slider-dot-container">
+          <div class="slider-dot active"></div>
+          <div class="slider-dot"></div>
+          <div class="slider-dot"></div>
+        </div>
+      </div> <!-- slider -->
 
-    </header>
+    </header> <!-- header -->
 
     <main>
 
+
+
     </main>
 
-    <footer>
-    </footer>
+    <footer class="site-footer">
+
+      <div class="footer-nav">
+        <div class="footer-head">
+          <a href="index.html"><img src="client_res/img/logo/footerLogo.png" alt=""></a>
+          <div class="social-container">
+            <a class="social-link" href=""><img class="social-icon" src="client_res/img/icon/social/instagramFooter.png" alt=""></a>
+            <a class="social-link" href=""><img class="social-icon" src="client_res/img/icon/social/pinterestFooter.png" alt=""></a>
+            <a class="social-link" href=""><img class="social-icon" src="client_res/img/icon/social/instagramFooter.png" alt=""></a>
+            <a class="social-link" href=""><img class="social-icon" src="client_res/img/icon/social/facebookFooter.png" alt=""></a>
+            <a class="social-link" href=""><img class="social-icon" src="client_res/img/icon/social/youtubeFooter.png" alt=""></a>
+          </div>
+        </div>
+        <div class="footer-col">
+          <h1>Training courses</h1>
+          <ul>
+            <li><a class="footer-link" href="#">Essential Puppy Training</a></li>
+            <li><a class="footer-link" href="#">Essential Dog Training</a></li>
+            <li><a class="footer-link" href="#">Advanced Dog Training</a></li>
+            <li><a class="footer-link" href="#">Dog Sports</a></li>
+            <li><a class="footer-link" href="#">Group Courses</a></li>
+            <li><a class="footer-link" href="#">Upcoming Courses Schedule</a></li>
+            <li><a class="footer-link" href="#">Urban Legends</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h1>Play Groups</h1>
+          <ul>
+            <li><a class="footer-link" href="#">About Play Groups</a></li>
+            <li><a class="footer-link" href="#">Free Puppy Play Groups</a></li>
+            <li><a class="footer-link" href="#">Free Dog Play Groups</a></li>
+            <li><a class="footer-link" href="#">Free Play Group</a>
+              <ul>
+                <li><a class="footer-link" href="#">Orientation Lesson</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h1>Private Training</h1>
+          <ul>
+            <li><a class="footer-link" href="#">Behavioural Consultations</a></li>
+            <li><a class="footer-link" href="#">Private Training Lessons</a></li>
+            <li><a class="footer-link" href="#">Telephone Consultations</a></li>
+            <li><a class="footer-link" href="#">Board &amp; Train</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h1>Dog Behaviour</h1>
+          <ul>
+            <li><a class="footer-link" href="#">Understanding Dog Behaviour</a></li>
+            <li><a class="footer-link" href="#">Upcoming Seminars</a></li>
+            <li><a class="footer-link" href="#">UrbanTV</a></li>
+            <li><a class="footer-link" href="#">Behaviour Advice &amp; Articles</a></li>
+            <li><a class="footer-link" href="#">Useful Information &amp; Links</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h1>About Urban</h1>
+          <ul>
+            <li><a class="footer-link" href="#">About Us</a></li>
+            <li><a class="footer-link" href="#">Training Information</a>
+              <ul>
+                <li><a class="footer-link" href="#">&amp; Tools</a></li>
+              </ul>
+            </li>
+            <li><a class="footer-link" href="#">Our Training Methods</a></li>
+            <li><a class="footer-link" href="#">Meet the Trainers</a></li>
+            <li><a class="footer-link" href="#">FAQs</a></li>
+            <li><a class="footer-link" href="#">Testimonials</a></li>
+            <li><a class="footer-link" href="#">Terms and Conditions</a></li>
+            <li><a class="footer-link" href="#">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="footer-col">
+          <h1>Enrol</h1>
+          <ul>
+            <li><a class="footer-link" href="#">Enrol With Us</a></li>
+            <li><a class="footer-link" href="#">View Course Schedule</a></li>
+            <li><a class="footer-link" href="#">Package Deals</a></li>
+            <li><a class="footer-link" href="#">Payment Options</a></li>
+          </ul>
+        </div>
+      </div> <!-- footer navigation -->
+
+      <div class="copyright">
+        Copyright &#169; Urban Dog Training 2018
+      </div> <!-- copyright information -->
+
+    </footer> <!-- footer -->
 
   </body>
   <script src="ext_res/jquery/jquery-3.2.1.js" type="text/javascript"></script> <!-- jQuery -->
