fix carousel icons
fix carousel icons with font-awesome

--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
             </div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#headerCarouselIndicators" role="button" data-slide="prev">
-          <span class="" aria-hidden="true"><img class="" src="client_res/img/icon/carouselLeft.png" alt=""></span>
+        <a class="carousel-control-prev carouselControlIcon" href="#headerCarouselIndicators" role="button" data-slide="prev">
+          <i class="fa fa-chevron-left" aria-hidden="true"></i>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#headerCarouselIndicators" role="button" data-slide="next">
-          <span class="" aria-hidden="true"><img class="" src="client_res/img/icon/carouselRight.png" alt=""></span>
+        <a class="carousel-control-next carouselControlIcon" href="#headerCarouselIndicators" role="button" data-slide="next">
+          <i class="fa fa-chevron-right" aria-hidden="true"></i>
           <span class="sr-only">Next</span>
         </a>
       </div> <!-- carousel -->
@@ -307,11 +307,6 @@
           </div>-->
           <div class="testemonialCol">
             <div id="testemonialCarouselIndicators" class="carousel slide carouselTestemonial" data-ride="carousel">
-              <ol class="carousel-indicators carouselIndicators align-items-center">
-                <li data-target="#testemonialCarouselIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#testemonialCarouselIndicators" data-slide-to="1"></li>
-                <li data-target="#testemonialCarouselIndicators" data-slide-to="2"></li>
-              </ol>
               <div class="carousel-inner testemonialCarouselInner">
                 <div class="carousel-item testemonialCarouselItem active">
                   <img class="userImg" src="client_res/img/testemonials/user.png" alt="First slide">
@@ -335,12 +330,12 @@
                   </div>
                 </div>
               </div>
-              <a class="testemonialCarouselControl" href="#headerCarouselIndicators" role="button" data-slide="prev">
-                <img class="" src="client_res/img/icon/carouselLeft.png" alt="">
+              <a class="carousel-control-prev carouselControlIcon" href="#testemonialCarouselIndicators" role="button" data-slide="prev">
+                <i class="fa fa-chevron-left" aria-hidden="true"></i>
                 <span class="sr-only">Previous</span>
               </a>
-              <a class="carousel-control-next" href="#headerCarouselIndicators" role="button" data-slide="next">
-                <span class="" aria-hidden="true"><img class="" src="client_res/img/icon/carouselRight.png" alt=""></span>
+              <a class="carousel-control-next carouselControlIcon" href="#testemonialCarouselIndicators" role="button" data-slide="next">
+                <i class="fa fa-chevron-right" aria-hidden="true"></i>
                 <span class="sr-only">Next</span>
               </a>
             </div> <!-- carousel -->
