--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
           </div>
         </div>
         <a class="carousel-control-prev carouselControlIcon" href="#headerCarouselIndicators" role="button" data-slide="prev">
-          <i class="fa fa-chevron-left" aria-hidden="true"></i>
+          <i class="fa fa-angle-left" aria-hidden="true"></i>
           <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next carouselControlIcon" href="#headerCarouselIndicators" role="button" data-slide="next">
-          <i class="fa fa-chevron-right" aria-hidden="true"></i>
+          <i class="fa fa-angle-right" aria-hidden="true"></i>
           <span class="sr-only">Next</span>
         </a>
       </div> <!-- carousel -->
@@ -331,11 +331,11 @@
                 </div>
               </div>
               <a class="carousel-control-prev carouselControlIcon" href="#testemonialCarouselIndicators" role="button" data-slide="prev">
-                <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                <i class="fa fa-angle-left" aria-hidden="true"></i>
                 <span class="sr-only">Previous</span>
               </a>
               <a class="carousel-control-next carouselControlIcon" href="#testemonialCarouselIndicators" role="button" data-slide="next">
-                <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
                 <span class="sr-only">Next</span>
               </a>
             </div> <!-- carousel -->
@@ -474,7 +474,8 @@
   <script src="ext_res/bootstrap/assets/js/vendor/popper.min.js" type="text/javascript"></script> <!-- Popper -->
   <script src="ext_res/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script> <!-- Bootstrap -->
 
-  <script src="https://use.fontawesome.com/78d1e57168.js"></script> <!-- Font Awesome -->
+    <script defer src="ext_res/font-awesome/js/packs/solid.js"></script>
+    <script defer src="ext_res/font-awesome/js/fontawesome.js"></script> <!-- Font Awesome -->
 
   <script src="res/js/app.js" type="text/javascript"></script> <!-- Custom Functions -->
 
