--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li class="nav-item dropdown navItem">
               <a class="nav-link dropdown-toggle navLink" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Training Courses
+                <i class="far fa-chevron-circle-down"></i>
               </a>
               <div class="dropdown-menu dropdownMenu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item navLink" href="#">Essential Puppy Training</a>
@@ -35,6 +36,7 @@
             <li class="nav-item dropdown navItem">
               <a class="nav-link dropdown-toggle navLink" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Play Groups
+                <i class="far fa-chevron-circle-down"></i>
               </a>
               <div class="dropdown-menu dropdownMenu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item navLink" href="#">About Play Groups</a>
@@ -47,6 +49,7 @@
             <li class="nav-item dropdown navItem">
               <a class="nav-link dropdown-toggle navLink" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Private Training
+                <i class="far fa-chevron-circle-down"></i>
               </a>
               <div class="dropdown-menu dropdownMenu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item navLink" href="#">Behavioural Consultations</a>
@@ -63,6 +66,7 @@
             <li class="nav-item dropdown navItem">
               <a class="nav-link dropdown-toggle navLink" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Dog Behaviour
+                <i class="far fa-chevron-circle-down"></i>
               </a>
               <div class="dropdown-menu dropdownMenu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item navLink" href="#">Understanding Dog Behaviour</a>
@@ -75,6 +79,7 @@
             <li class="nav-item dropdown navItem">
               <a class="nav-link dropdown-toggle navLink" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 About Urban
+                <i class="far fa-chevron-circle-down"></i>
               </a>
               <div class="dropdown-menu dropdownMenu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item navLink" href="#">About Us</a>
@@ -90,6 +95,7 @@
             <li class="nav-item dropdown navItem">
               <a class="nav-link dropdown-toggle navLink" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Contact Urban
+                <i class="far fa-chevron-circle-down"></i>
               </a>
               <div class="dropdown-menu dropdownMenu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item navLink" href="#">Buffer</a>
@@ -311,21 +317,21 @@
                 <div class="carousel-item testemonialCarouselItem active">
                   <img class="userImg" src="client_res/img/testemonials/user.png" alt="First slide">
                   <div class="testemonialCarouselCaption">
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna&ellip;""</p>
+                    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna&hellip;&rdquo;</p>
                     <h1>Victoria Rivera</h1>
                   </div>
                 </div>
                 <div class="carousel-item testemonialCarouselItem">
                   <img class="userImg" src="client_res/img/testemonials/user.png" alt="First slide">
                   <div class="testemonialCarouselCaption">
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna&ellip;""</p>
+                    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna&hellip;&rdquo;</p>
                     <h1>Victoria Rivera</h1>
                   </div>
                 </div>
                 <div class="carousel-item testemonialCarouselItem">
                   <img class="userImg" src="client_res/img/testemonials/user.png" alt="First slide">
                   <div class="testemonialCarouselCaption">
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna&ellip;""</p>
+                    <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna&hellip;&rdquo;</p>
                     <h1>Victoria Rivera</h1>
                   </div>
                 </div>
@@ -360,7 +366,7 @@
           <div class="actionBtnCol">
             <div class="actionBtn">
               <h1>Treats!</h1>
-              <h2>Printable and Goodies</h2>
+              <h2>Printable &amp; Goodies</h2>
             </div>
           </div>
         </div>
@@ -474,8 +480,12 @@
   <script src="ext_res/bootstrap/assets/js/vendor/popper.min.js" type="text/javascript"></script> <!-- Popper -->
   <script src="ext_res/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script> <!-- Bootstrap -->
 
+  <!-- Font-Awesome -->
     <script defer src="ext_res/font-awesome/js/packs/solid.js"></script>
-    <script defer src="ext_res/font-awesome/js/fontawesome.js"></script> <!-- Font Awesome -->
+    <script defer src="ext_res/font-awesome/js/packs/regular.js"></script>
+    <script defer src="ext_res/font-awesome/js/packs/light.js"></script>
+    <script defer src="ext_res/font-awesome/js/fontawesome.js"></script>
+  <!-- -->
 
   <script src="res/js/app.js" type="text/javascript"></script> <!-- Custom Functions -->
 
