--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
           <ul class="navbar-nav navbarNav">
             <li class="nav-item dropdown navItem">
-              <a class="nav-link dropdown-toggle navLink" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle navLink" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Training Courses
                 <i class="far fa-chevron-circle-down"></i>
               </a>
@@ -34,7 +34,7 @@
               </div>
             </li>
             <li class="nav-item dropdown navItem">
-              <a class="nav-link dropdown-toggle navLink" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle navLink" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Play Groups
                 <i class="far fa-chevron-circle-down"></i>
               </a>
@@ -47,7 +47,7 @@
               </div>
             </li>
             <li class="nav-item dropdown navItem">
-              <a class="nav-link dropdown-toggle navLink" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle navLink" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Private Training
                 <i class="far fa-chevron-circle-down"></i>
               </a>
@@ -64,7 +64,7 @@
               </a>
             </li>
             <li class="nav-item dropdown navItem">
-              <a class="nav-link dropdown-toggle navLink" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle navLink" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Dog Behaviour
                 <i class="far fa-chevron-circle-down"></i>
               </a>
@@ -77,7 +77,7 @@
               </div>
             </li>
             <li class="nav-item dropdown navItem">
-              <a class="nav-link dropdown-toggle navLink" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle navLink" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 About Urban
                 <i class="far fa-chevron-circle-down"></i>
               </a>
@@ -93,7 +93,7 @@
               </div>
             </li>
             <li class="nav-item dropdown navItem">
-              <a class="nav-link dropdown-toggle navLink" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle navLink" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Contact Urban
                 <i class="far fa-chevron-circle-down"></i>
               </a>
@@ -374,10 +374,31 @@
 
       <section class="bannerSection">
         <div class="eBookBanner">
-
+          <div class="eBookContainer">
+            <div class="eBookText">
+              <h1>Download a free e-book</h1>
+              <h2>90 days training program</h2>
+            </div>
+            <div class="eBookBtn">
+              <button class="btn eBookDownloadBtn">Download Now</button>
+            </div>
+          </div>
         </div>
         <div class="subscriptionBanner">
-
+          <div class="subscriptionContainer">
+            <div class="bannerIcon">
+              <img src="client_res/img/banner/award.png" alt="">
+            </div>
+            <div class="subscriptionText">
+              <h1>Subscribe to our newsletter</h1>
+            </div>
+            <div class="subscriptionEmail">
+              <input class="subscriptionBox" type="email">
+            </div>
+            <div class="subscriptionBtn">
+              <button class="btn subscribeBtn">Subscribe</button>
+            </div>
+          </div>
         </div>
       </section>
 
