login and sign up forms

--- a/02_Client_Login_001c.html
+++ b/02_Client_Login_001c.html
@@ -4,6 +4,11 @@
     <title>Home | Urban Dog Training</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Date Picker CSS -->
+    <link rel="stylesheet" type="text/css" href="ext-res/date-picker/css/daterangepicker.css" />
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="res/css/style.css" type="text/css" media="all" />
   </head>
   <body>
@@ -338,7 +343,15 @@
             </div>
             <div class="input-wrap">
               <label>Date of Birth:</label>
-              <input type="date">
+              <div class="custom-picker-block">
+                <input type="date" class="custom-picker">
+                <span class="date-picker">
+                  <span class="fa-layers fa-fw" style="display: block;">
+                    <i class="far fa-calendar"></i>
+                    <i class="fa fa-square" data-fa-transform="shrink-10.7 down-2.5 right-1.5"></i>
+                  </span>
+                </span>
+              </div>
             </div>
             <div class="input-wrap radios">
               <label>Dog's sex and reproductive status:</label>
@@ -924,7 +937,12 @@
     <script defer src="ext-res/font-awesome/js/packs/regular.js"></script>
     <script defer src="ext-res/font-awesome/js/packs/light.js"></script>
     <script defer src="ext-res/font-awesome/js/fontawesome.js"></script>
-  <!-- -->
+  <!---->
+
+  <!-- Date Picker -->
+    <script type="text/javascript" src="ext-res/moment/moment.min.js"></script> <!-- moment.js -->
+    <script type="text/javascript" src="ext-res/date-picker/js/daterangepicker.js"></script>
+  <!---->
 
   <script src="res/js/app.js" type="text/javascript"></script> <!-- Custom Functions -->
 
